[GitHub Actions] Removed py36

--- a/.github/workflows/on-push-tox.yaml
+++ b/.github/workflows/on-push-tox.yaml
@@ -6,7 +6,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python: ["3.6", "3.7", "3.8", "3.9", "3.10", "3.11", "3.12"]
+        python: ["3.7", "3.8", "3.9", "3.10", "3.11", "3.12"]
     steps:
       - run: echo "tox tests on `${{ github.sha }}` in `${{ github.ref }}`"
       - name: Check out repository
