--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 requires =
     tox>=4
-env_list = format, lint, type, py{37,38,39,310,311,312}
+env_list = format, lint, type
 no_package = true
 
 [testenv]
