--- a/.github/workflows/run-tox.yaml
+++ b/.github/workflows/run-tox.yaml
@@ -1,6 +1,11 @@
 name: On Push Tox Tests
 run-name: tox tests on `${{ github.sha }}` in `${{ github.ref }}`
-on: [push]
+on:
+  push:
+    branches:
+      - "development"
+  pull_request:
+    types: [opened, reopened]
 jobs:
   run-tox:
     runs-on: ubuntu-latest
